--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                         <div class="foot-about">
                             <h2><a href="#"><img src="images/logo.png" alt=""></a></h2>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien.</p>
+                            <p>A new medical start up that only cares for the patient Visit us today!.</p>
 
                             <p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> </p>
