--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,6 @@
                             <ul class="d-flex flex-column flex-lg-row justify-content-lg-end align-items-center">
                                 <li class="current-menu-item"><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About us</a></li>
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="news.html">News</a></li>
                                 <li><a href="contact.html">Contact</a></li>
 
                                 <li class="call-btn button gradient-bg mt-3 mt-md-0">
@@ -126,7 +124,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien.</p>
 
                             <p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script></a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                         </div><!-- .foot-about -->
                     </div><!-- .col -->
@@ -136,24 +134,22 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                             <h2>Contact</h2>
 
                             <ul class="p-0 m-0">
-                                <li><span>Addtress:</span>Mitlton Str. 26-27 London UK</li>
-                                <li><span>Phone:</span>+53 345 7953 32453</li>
-                                <li><span>Email:</span>yourmail@gmail.com</li>
+                                <li><span>Addtress:</span>123 Address Lane, Dallas, TX, 12345</li>
+                                <li><span>Phone:</span>123 456 7890</li>
+                                <li><span>Email:</span>medplace@gmail.com</li>
                             </ul>
                         </div>
                     </div><!-- .col -->
 
                     <div class="col-12 col-md-6 col-lg-4 mt-5 mt-md-0">
                         <div class="foot-links">
-                            <h2>Usefull Links</h2>
+                            <h2>Useful Links</h2>
 
                             <ul class="p-0 m-0">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About us</a></li>
                                 <li><a href="elements.html">Departments</a></li>
                                 <li><a href="contact.html">Contact</a></li>
-                                <li><a href="news.html">FAQ</a></li>
-                                <li><a href="services.html">Testimonials</a></li>
                             </ul>
                         </div><!-- .foot-links -->
                     </div><!-- .col -->
