--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,12 @@
                 </div>
             </div>
         </div>
-
+        <form>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname">
+        </form>
     <div class="contact-form">
         <div class="container">
             <div class="row">
