--- a/contact.html
+++ b/contact.html
@@ -67,10 +67,12 @@
             </div>
         </div>
         <form>
-            <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname"><br>
-            <label for="lname">Last name:</label><br>
-            <input type="text" id="lname" name="lname">
+            <div class="col-12  col-md-4">
+                <label for="fname">First name:</label><br>
+                <input type="text" id="fname" name="fname"><br>
+                <label for="lname">Last name:</label><br>
+                <input type="text" id="lname" name="lname">
+            </div>
         </form>
     <div class="contact-form">
         <div class="container">
