--- a/contact.html
+++ b/contact.html
@@ -91,10 +91,11 @@
       <input type="text" placeholder="New Patient?" />
     </form>
     <form>
-      First name:
+      Address:
       <br>
-      <input type="text" name="fname">
-      <br> Last name:
+      <textarea rows="10" cols="25" placeholder="This is the default text"></textarea>
+        <input type="text" name="fname">
+      <br> Allergies:
       <br>
       <input type="text" name="lname">
     </form>
