--- a/contact.html
+++ b/contact.html
@@ -93,11 +93,11 @@
     <form>
       Address:
       <br>
-      <textarea rows="10" cols="25" placeholder="This is the default text"></textarea>
+      <textarea rows="10" cols="250" placeholder="Enter full home address here."></textarea>
         <input type="text" name="fname">
       <br> Allergies:
       <br>
-      <input type="text" name="lname">
+      <textarea rows="10" cols="250" placeholder="Enter any allergies, especially to medications."></textarea>
     </form>
     <form>
       <input type="radio" name="gender" value="male" checked> Male
