--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                                 <li><a href="contact.html">Contact</a></li>
 
                                 <li class="call-btn button gradient-bg mt-3 mt-md-0">
-                                    <a class="d-flex justify-content-center align-items-center" href="#"><img src="images/emergency-call.png"> +34 586 778 8892</a>
+                                    <a class="d-flex justify-content-center align-items-center" href="#"><img src="images/emergency-call.png"> 123-456-7890</a>
                                 </li>
                             </ul>
                         </nav><!-- .site-navigation -->
@@ -59,7 +59,7 @@
                     <div class="breadcrumbs">
                         <ul class="d-flex flex-wrap align-items-center p-0 m-0">
                             <li><a href="#">Home</a></li>
-                            <li>Contact</li>
+                            <li>Check-in Online</li>
                         </ul>
                     </div><!-- .breadcrumbs -->
 
@@ -93,10 +93,10 @@
     <form>
       Address:
       <br>
-      <textarea rows="10" cols="120" placeholder="Enter full home address here."></textarea>
+      <textarea rows="5" cols="120" placeholder="Enter full home address here."></textarea>
       <br> Allergies:
       <br>
-      <textarea rows="10" cols="120" placeholder="Enter any allergies, especially to medications."></textarea>
+      <textarea rows="5" cols="120" placeholder="Enter any allergies, especially to medications."></textarea>
     </form>
     <form>
       <input type="radio" name="gender" value="male" checked> Male
