--- a/contact.html
+++ b/contact.html
@@ -127,8 +127,8 @@
       </fieldset>
     </form>
   </body>
- 
-     
+    <a href="#" class="button gradient-bg">Check-In</a>
+              
     <footer class="site-footer">
         <div class="footer-widgets">
             <div class="container">
