--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1>Contact</h1>
+                    <h1>Check In Before Your Appointment</h1>
 
                     <div class="breadcrumbs">
                         <ul class="d-flex flex-wrap align-items-center p-0 m-0">
