--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,6 @@
                         <nav class="site-navigation d-flex justify-content-end align-items-center">
                             <ul class="d-flex flex-column flex-lg-row justify-content-lg-end align-items-center">
                                 <li class="current-menu-item"><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About us</a></li>
                                 <li><a href="contact.html">Contact</a></li>
 
                                 <li class="call-btn button gradient-bg mt-3 mt-md-0">
@@ -137,7 +136,7 @@
                         <div class="foot-about">
                             <h2><a href="#"><img src="images/logo.png" alt=""></a></h2>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien.</p>
+                            <p>A new medical start up that only cares for the patient Visit us today!</p>
 
                             <p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script></a>
@@ -163,7 +162,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script></a>
 
                             <ul class="p-0 m-0">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About us</a></li>
                                 <li><a href="elements.html">Departments</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
