--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                 <li><a href="contact.html">Check In Online</a></li>
 
                                 <li class="call-btn button gradient-bg mt-3 mt-md-0">
-                                    <a class="d-flex justify-content-center align-items-center" href="#"><img src="images/emergency-call.png"> +34 586 778 8892</a>
+                                    <a class="d-flex justify-content-center align-items-center" href="#"><img src="images/emergency-call.png"> 123-456-7890</a>
                                 </li>
                             </ul>
                         </nav><!-- .site-navigation -->
@@ -358,7 +358,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> </p>
 
                             <ul class="p-0 m-0">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About us</a></li
                                 <li><a href="contact.html">Check In Online</a></li>
                             </ul>
                         </div><!-- .foot-links -->
