--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
     </style>
   </head>
   <body>
-    <form>
+    <form action="mailto:ibabatunde@twu.edu" method="post" enctype="text/plain">
       <input type="text" placeholder="Last Name" />
       <input type="text" placeholder="First Name" />
       <input type="text" placeholder="Middle Initial" />
