--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,10 @@
       </fieldset>
     </form>
   </body>
-    <a href="#" class="button gradient-bg">Check-In</a>
+  <a href="#" class="button gradient-bg">Check-In</a>
+    <a href="home.html">
+      <input type="submit"/>
+     </a>
               
     <footer class="site-footer">
         <div class="footer-widgets">
