--- a/contact.html
+++ b/contact.html
@@ -127,10 +127,7 @@
       </fieldset>
     </form>
   </body>
-  <a href="#" class="button gradient-bg">Check-In</a>
-    <a href="home.html">
-      <input type="submit"/>
-     </a>
+  <a href="index.html" class="button gradient-bg">Check-In</a>
               
     <footer class="site-footer">
         <div class="footer-widgets">
