--- a/submission.html
+++ b/submission.html
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1>Check In Before Your Appointment</h1>
+                    <h1>You have successfully checked in!</h1>
 
                     <div class="breadcrumbs">
                         <ul class="d-flex flex-wrap align-items-center p-0 m-0">
@@ -68,7 +68,7 @@
         </div>
         
   <head>
-        <title>Virtual Check-In</title>
+        <title>Submission</title>
             <style>
                 input {
                     padding: 5px;
@@ -81,53 +81,6 @@
         }
     </style>
   </head>
-  <body>
-    <form action="mailto:ibabatunde@twu.edu" method="post" enctype="text/plain">
-      <input type="text" placeholder="Last Name" />
-      <input type="text" placeholder="First Name" />
-      <input type="text" placeholder="Middle Initial" />
-      <input type="text" placeholder="Birth Date" />
-      <input type="text" placeholder="Age" />
-      <input type="text" placeholder="New Patient?" />
-    </form>
-    <form>
-      Address:
-      <br>
-      <textarea rows="5" cols="120" placeholder="Enter full home address here."></textarea>
-      <br> Allergies:
-      <br>
-      <textarea rows="5" cols="120" placeholder="Enter any allergies, especially to medications."></textarea>
-    </form>
-    <form>
-      <input type="radio" name="gender" value="male" checked> Male
-      <br>
-      <input type="radio" name="gender" value="female"> Female
-      <br>
-      <input type="radio" name="gender" value="other"> Other
-    </form>
-    <form>
-      <label for="field">Emergency Contact Name</label>
-      <input id="field" type="text" name="name">
-    </form>
-    <form>
-      <label for="field1">Emergency Contact Number</label>
-      <input id="field1" type="text" name="name">
-    </form>
-    <form>
-      <fieldset>
-        <legend>Insurance</legend>
-        <input type="radio" name="radio" id="radio">
-        <label for="radio">Blue Cross Blue Shield</label>
-        <input type="radio" name="radio1" id="radio1">
-        <label for="radio1">UnitedHealth</label>
-        <input type="radio" name="radio2" id="radio2">
-        <label for="radio2">Anthem</label>
-        <input type="radio" name="radio3" id="radio3">
-        <label for="radio3">Other</label>
-      </fieldset>
-    </form>
-  </body>
-  <a href="index.html" class="button gradient-bg">Check-In</a>
               
     <footer class="site-footer">
         <div class="footer-widgets">
