--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
       </fieldset>
     </form>
   </body>
-  <a href="index.html" class="button gradient-bg">Check-In</a>
+  <a href="submission.html" class="button gradient-bg">Check-In</a>
               
     <footer class="site-footer">
         <div class="footer-widgets">
